add the footer part

--- a/style.css
+++ b/style.css
@@ -120,3 +120,17 @@ nav button{
 }
 
 /* footer styles */
+footer{
+    text-align: center;
+
+}
+
+.Name{
+    display: inline;
+}
+
+.links a{
+    text-decoration: none;
+    color: #252432;
+}
+
