--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ nav button{
 .user-value{
     font-size: 50px;
     font-weight: bold;
+    color: #4E47FF;
 }
 /* user input style */
 .user-input{
